--- a/public/cbcid.html
+++ b/public/cbcid.html
@@ -9,10 +9,11 @@
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
- 
+  <meta name="format-detection" content="telephone=no"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
   <link href="assets/img/cbcid/download__1_-removebg-preview.png" rel="icon">
  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+ <link rel='stylesheet' href='https://lucid-northcutt-877344.netlify.com/dist/splitting.css'>
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -27,6 +28,7 @@
 body {font-family: Arial;
   background-image: url(assets/img/b93964eb59cdeee2c61cf9cebbd44832.jpg) ;
 }
+
 
 /* Style the tab */
 .tab {
@@ -71,6 +73,113 @@ body {font-family: Arial;
   border-top: none;
   text-align: center;
 }
+.clock {
+  --time-offset: 0;
+  width: 30%;
+  height: 30%;
+  margin-top: 20px;
+  background: rgb(180, 173, 173);
+  text-align: center;
+  display: -webkit-box;
+  display: inline-flex;
+  align-items: center;
+
+  font-family: monospace;
+  font-size: 5vmin;
+  font-family: 'Oswald', sans-serif;
+  letter-spacing: 0.1em;
+  -webkit-perspective: 500px;
+          perspective: 500px;
+  --h1: 1;
+  --h2: 2;
+  --m1: 3;
+  --m2: 4;
+  --s1: 5;
+  --s2: 6;
+}
+.clock, .clock:before,
+.clock * {
+  box-sizing: border-box;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+.clock:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+   -webkit-transform: translateZ(2.6em);
+          transform: translateZ(2.6em);
+} 
+
+.colon {
+  display: inline-block;
+  opacity: 0.8;
+  -webkit-transform: translateZ(2.5em);
+          transform: translateZ(2.5em);
+  width: 1ch;
+  margin: 0;
+  text-align: center;
+}
+
+.cog {
+  position: relative;
+  width: 1ch;
+  height: 1ch;
+  margin: -.25ch .1ch 0;
+  display: inline-block;
+  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.4, 0, 0.6, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.4, 0, 0.6, 1);
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.6, 1);
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.6, 1), -webkit-transform 0.3s cubic-bezier(0.4, 0, 0.6, 1);
+  -webkit-transform: rotateX(calc(  -1turn *  (var(--unit) / var(--char-total)) ));
+          transform: rotateX(calc(  -1turn *  (var(--unit) / var(--char-total)) ));
+}
+.cog .word,
+.cog .char {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  font-weight:bolder;
+  width: 1ch;
+  height: 1ch;
+}
+.cog .char {
+  -webkit-transform: rotateX(calc( 4deg + (360deg * var(--char-percent) ))) translateZ(2.5em);
+          transform: rotateX(calc( 4deg + (360deg * var(--char-percent) ))) translateZ(2.5em);
+}
+
+.tens {
+  text-align: right;
+}
+
+.hours.tens {
+  --unit: var(--h1);
+}
+
+.hours {
+  --unit: var(--h2);
+}
+
+.minutes.tens {
+  --unit: var(--m1);
+}
+
+.minutes {
+  --unit: var(--m2);
+}
+
+.seconds.tens {
+  --unit: var(--s1);
+}
+
+.seconds {
+  --unit: var(--s2);
+}
+
 </style>
 </head>
 <body>
@@ -86,7 +195,21 @@ body {font-family: Arial;
 </div>
 </div>
 </div>-->
+<div class="row" style="margin-left: 570px;">
 <img src="assets/img/cbcid/download__1_-removebg-preview.png" width="200" height="200" class="img-fluid" alt="logo">
+<div class="clock" style="margin-left: 200px;">
+
+  <span class="cog hours tens" data-splitting style="color: darkblue;">0123456789</span>
+  <span class="cog hours" data-splitting style="color: darkblue;">0123456789</span>
+  <span class="colon">:</span>
+  <span class="cog minutes tens" data-splitting style="color: green;">0123456789</span>
+  <span class="cog minutes" data-splitting style="color: green;">0123456789</span>
+  <span class="colon">:</span>
+  <span class="cog seconds tens" data-splitting style="color: rgb(139, 0, 35);">0123456789</span>
+  <span class="cog seconds" data-splitting style="color: rgb(139, 0, 35);">0123456789</span>
+
+</div>
+</div>
 <h1>SECURITY BRANCH</h1>
   <h1>CID</h1>
 <div class="container">
@@ -498,6 +621,8 @@ function openCity(evt, cityName) {
   
 }
 </script>
-   
+<script src='https://unpkg.com/splitting@next/dist/splitting.js'>
+</script>
+   <script src="clock.js"></script>
 </body>
 </html> 
