--- a/public/cbcid.html
+++ b/public/cbcid.html
@@ -28,7 +28,7 @@
   <style>
     body {
       font-family: Arial;
-      background-image: url(assets/img/b93964eb59cdeee2c61cf9cebbd44832.jpg);
+      background-image: url('https://s-media-cache-ak0.pinimg.com/736x/f4/ac/6a/f4ac6aac3afb587f6cae04155656fca3.jpg');
     }
 
     /* Style the tab */
@@ -204,7 +204,7 @@
         <div class="row">
 
 
-          <div class="col-sm-4">
+          <div class="col-sm-12">
             <label for="cars">SCALE:</label>
             <select id="qs_scale">
               <option value="Z+">Z+</option>
@@ -432,8 +432,8 @@
             style="margin-left: 10px;"></textarea><br><br><br><br>
 
           <label for="scale">Attach DSR:</label>
-          <input type="text" id="dsr" name="lname"><br>
-          <input type="file" id="fileToUpload">
+          <!--<input type="text" id="dsr" name="lname"><br>-->
+          <input type="file" id="fileToUpload"><br>
           <input class="btn btn-success" type="submit" value="Submit">
         </form>
       </div>
