--- a/public/cbcid.html
+++ b/public/cbcid.html
@@ -150,13 +150,15 @@
           <p>CID</p>
           <div class="row">
             <div class="col-sm-6">
-              <img src="assets/img/cbcid/sureshkumar.jpg">
+              <img src="assets/img/cbcid/sureshkumar.jpg"  style="padding-bottom: 10px;"width="200px" height="200px"></br>
+              <!--<img src="assets/img/cbcid/sureshkumar.jpg" width="100px" height="100px" alt="testimonial">-->
+              <p>testimonial Appears Here!!</p>
               <h2>T.Suresh Kumar</h2>
               <h3>SUPERINTENDENT OF POLICE</h3>
               <h3>SECURITY BRANCH CID</h3>
             </div>
             <div class="col-sm-6">
-              <marquee width="70%" direction="up" height="40%"
+              <marquee width="70%" direction="up" height="100%"
                 style="border:blue solid 3px;padding-top: 10px;text-align: center;">
                 This is sample scrolling text.</br>
                 This is sample scrolling text.</br>
@@ -166,9 +168,7 @@
                 This is sample scrolling text.</br>
 
               </marquee>
-              <p>
-                ""DESCRIPTION""
-              </p>
+              
             </div>
           </div>
         </div>
