--- a/public/index.html
+++ b/public/index.html
@@ -40,21 +40,20 @@
 
 
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
-  <script>
+   <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
-      apiKey: "AIzaSyBmjI7g6SenA_AWCvjij4u2ZJVqJCW_kIE",
-      authDomain: "face-dashboard.firebaseapp.com",
-      databaseURL: "https://face-dashboard.firebaseio.com",
-      projectId: "face-dashboard",
-      storageBucket: "face-dashboard.appspot.com",
-      messagingSenderId: "378833298796",
-      appId: "1:378833298796:web:8f7321d3585ffd85aa7f49",
-      measurementId: "G-1QZCDR285W"
-    };
+    apiKey: "AIzaSyBkcjzoaS4oCj4eK_N-o61eMwNsC9fSHR0",
+    authDomain: "cbcid-baa92.firebaseapp.com",
+    databaseURL: "https://cbcid-baa92.firebaseio.com",
+    projectId: "cbcid-baa92",
+    storageBucket: "cbcid-baa92.appspot.com",
+    messagingSenderId: "715309161260",
+    appId: "1:715309161260:web:086c5f376d8a8df1626a89",
+    measurementId: "G-5KK7CRXE0F"
+  };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
 
     const auth=firebase.auth();
   </script>
