Changed Home UI

--- a/public/cbcid.html
+++ b/public/cbcid.html
@@ -53,6 +53,10 @@
   <link href="assets/css/slide.css" rel="stylesheet">
 
   <style>
+    @page {
+      size: auto;
+    }
+
     body {
       font-family: Arial;
       background-image: url('https://s-media-cache-ak0.pinimg.com/736x/f4/ac/6a/f4ac6aac3afb587f6cae04155656fca3.jpg');
@@ -144,7 +148,7 @@
 
 </marquee>
 </div>-->
-      <div id="home" class="tabcontent" style="display: block;">
+        <div id="home" class="tabcontent" style="display: block;">
         <div class="border">
           <h3>Security Branch </h3>
           <p>CID</p>
@@ -153,13 +157,17 @@
               <img src="assets/img/cbcid/sureshkumar.jpg" style="padding-bottom: 10px;" width="200px"
                 height="200px"></br>
               <!--<img src="assets/img/cbcid/sureshkumar.jpg" width="100px" height="100px" alt="testimonial">-->
-              <p>testimonial Appears Here!!</p>
-              <h2>T.Suresh Kumar</h2>
-              <h3>SUPERINTENDENT OF POLICE</h3>
-              <h3>SECURITY BRANCH CID</h3>
+              
+			<div class="names" style="font-size:15px">
+              <h2 style="font-size:20px">T.Suresh Kumar</h2>
+              <h3 style="font-size:20px">SUPERINTENDENT OF POLICE</h3>
+              <h3 style="font-size:20px">SECURITY BRANCH CID</h3>
+			</div>
             </div>
             <div class="col-sm-6">
-              <marquee width="70%" direction="up" height="100%"
+			<p style="border-style: double;width:390px;margin-left:70px;">testimonial Appears Here!!</p>
+			<h2 style="font-size:20px">Today's Updates</h2>
+              <marquee width="70%" direction="up" height="50%"
                 style="border:blue solid 3px;padding-top: 10px;text-align: center;">
                 This is sample scrolling text.</br>
                 This is sample scrolling text.</br>
@@ -174,6 +182,7 @@
           </div>
         </div>
       </div>
+
 
       <div id="vip" class="tabcontent">
         <!--<div class="tab" >-->
@@ -192,9 +201,11 @@
             <div class="col-sm-6" style="text-align: left;">
 
               <label for="name">Name of the Person:</label><br>
-              <input type="text" id="s_name" name="fname" pattern="[A-Za-z ]+" style="margin-left: 20px;" required ><br><br>
+              <input type="text" id="s_name" name="fname" pattern="[A-Za-z ]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="des">Designation:</label><br>
-              <input type="text" id="s_des" name="lname" pattern="[A-Za-z]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="s_des" name="lname" pattern="[A-Za-z]+" style="margin-left: 20px;"
+                required><br><br>
 
 
             </div>
@@ -205,14 +216,16 @@
                 <select id="s_scale">
                   <option value="Z+">Z+</option>
                   <option value="Z">Z</option>
+                  <option value="Y+">Y+</option>
                   <option value="Y">Y</option>
                   <option value="X">X</option>
+                  <option value="NO SCALE">NO SCALE</option>
                 </select>
                 <br><br>
               </div>
             </div>
           </div>
-          <input class="btn btn-success" type="submit" value="Submit" data-toggle="modal" >
+          <input class="btn btn-success" type="submit" value="Submit" data-toggle="modal">
         </form>
         <!-- Modal -->
         <div class="modal fade" id="myModal" role="dialog">
@@ -240,9 +253,9 @@
             let des = document.querySelector('#s_des').value.toUpperCase();
             let scale = document.querySelector('#s_scale').value.toUpperCase();
             database.ref('scaleofsecurity').push({ name: name, des: des, scale: scale }).then(qw => {
-                $('#myModal').modal('show');
-                document.getElementById('officerform').reset();
-              });
+              $('#myModal').modal('show');
+              document.getElementById('officerform').reset();
+            });
           }
         </script>
       </div>
@@ -256,8 +269,10 @@
             <select id="qs_scale">
               <option value="Z+">Z+</option>
               <option value="Z">Z</option>
+              <option value="Y+">Y+</option>
               <option value="Y">Y</option>
               <option value="X">X</option>
+              <option value="NO SCALE">NO SCALE</option>
             </select>
             <br><br>
             <button class="btn btn-success" id="protocteedata">Submit</button>
@@ -483,23 +498,36 @@
             <div class="col-sm-6" style="text-align: left;">
 
               <label for="name">Name of the VIP :</label><br>
-              <input type="text" id="name" name="fname" pattern="[A-Za-z ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="name" name="fname" pattern="[A-Za-z ]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="des">Designation:</label><br>
               <input type="text" id="des" name="lname" pattern="[A-Za-z]+" style="margin-left: 20px;" required><br><br>
               <label for="scale">Scale of Security:</label><br>
-              <input type="text" id="scale7" name="scale" style="margin-left: 20px;" required><br><br><br><br>
+              <select id="scale7" style="margin-left: 20px;">
+                <option value="Z+">Z+</option>
+                <option value="Z">Z</option>
+                <option value="Y+">Y+</option>
+                <option value="Y">Y</option>
+                <option value="X">X</option>
+                <option value="NO SCALE">NO SCALE</option>
+              </select><br><br>
               <label for="date">Date of Visit:</label><br>
               <input type="date" id="date" name="fname" style="margin-left: 20px;" required><br><br>
               <label for="purpose">Purpose of Visit:</label><br>
-              <input type="text" id="purpose" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="purpose" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="stay">Place of Stay:</label><br>
-              <input type="text" id="stay" name="fname"  pattern="[A-Za-z ]+" style="margin-left: 20px;" required><br><br><br><br>
+              <input type="text" id="stay" name="fname" pattern="[A-Za-z ]+" style="margin-left: 20px;"
+                required><br><br><br><br>
               <label for="place">Place of Visit:</label><br>
-              <input type="text" id="place" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="place" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="function">Function Places:</label><br>
-              <input type="text" id="function" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="function" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="type">Type of Function:</label><br>
-              <input type="text" id="type" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;" required><br><br><br><br>
+              <input type="text" id="type" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;"
+                required><br><br><br><br>
 
 
             </div>
@@ -507,23 +535,23 @@
 
               <label for="airport">Airport Details:</label><br>
               <label for="a_from">From:</label><br>
-              <input type="text" id="a_from" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;" ><br>
+              <input type="text" id="a_from" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;"><br>
               <label for="a_to">To:</label><br>
-              <input type="text" id="a_to" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;" ><br><br>
+              <input type="text" id="a_to" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;"><br><br>
 
               <label for="helipad">Helipad Details:</label><br>
               <label for="h_from">From:</label><br>
-              <input type="text" id="h_from" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;" ><br>
+              <input type="text" id="h_from" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;"><br>
               <label for="h_to">To:</label><br>
-              <input type="text" id="h_to" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;" ><br><br>
+              <input type="text" id="h_to" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;"><br><br>
 
               <label for="des">BR Car :</label><br>
-              <input type="radio" id="br" name="lname" value="Yes" style="margin-left: 20px;" >Yes
+              <input type="radio" id="br" name="lname" value="Yes" style="margin-left: 20px;">Yes
 
               <!--<label for="des">If not Provided:</label><br>-->
-              <input type="radio" id="br_pro" name="lname" value="No" style="margin-left: 20px;" >No<br>
+              <input type="radio" id="br_pro" name="lname" value="No" style="margin-left: 20px;">No<br>
 
-              <input type="text" id="br_reason" name="lname" style="margin-left: 25px;display: none;" ><br><br>
+              <input type="text" id="br_reason" name="lname" style="margin-left: 25px;display: none;"><br><br>
 
 
               <script>
@@ -548,10 +576,10 @@
 
 
               <label for="des">PSO:</label><br>
-              <input type="radio" id="pso" name="lname" value="Yes" style="margin-left: 20px;">Yes
+              <input type="radio" id="pso" name="llname" value="Yes" style="margin-left: 20px;">Yes
 
 
-              <input type="radio" id="pso_pro" name="lname" value="no" style="margin-left: 20px;">No<br><br>
+              <input type="radio" id="pso_pro" name="llname" value="no" style="margin-left: 20px;">No<br><br>
 
               <input type="text" id="pso_reason" name="lname" style="margin-left: 20px;display:none"><br><br>
 
@@ -564,8 +592,8 @@
             </div>
           </div>
           <label for="remark">Remarks</label>
-          <textarea name="message" id="remarks" rows="8" columns="10"
-            style="margin-left: 10px;" required></textarea><br><br><br><br>
+          <textarea name="message" id="remarks" rows="8" columns="10" style="margin-left: 10px;"
+            required></textarea><br><br><br><br>
 
           <label for="scale">Attach DSR:</label>
           <!--<input type="text" id="dsr" name="lname"><br>-->
@@ -912,28 +940,38 @@
             <div class="col-sm-6" style="text-align: left;">
 
               <label for="no">NOC REFERENCE NO:</label><br>
-              <input type="text" id="nocu_refno" name="fname" pattern="[A-Za-z0-9]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_refno" name="fname" pattern="[A-Za-z0-9]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="origin">NOC ORIGIN DEPT :</label><br>
-              <input type="text" id="nocu_origin" name="lname" pattern="[A-Za-z0-9]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_origin" name="lname" pattern="[A-Za-z0-9]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="name">APPLICANT NAME:</label><br>
-              <input type="text" id="nocu_name" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_name" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="des">DESIGNATION:</label><br>
-              <input type="text" id="nocu_des" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;" required><br><br><br><br>
+              <input type="text" id="nocu_des" name="fname" pattern="[A-Za-z]+" style="margin-left: 20px;"
+                required><br><br><br><br>
               <label for="country">PROPOSED COUNTRY:</label><br>
-              <input type="text" id="nocu_country" name="lname" pattern="[A-Za-z0-9]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_country" name="lname" pattern="[A-Za-z0-9]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="purpose">PURPOSE:</label><br>
-              <input type="text" id="nocu_purpose" name="fname" pattern="[A-Za-z0-9 ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_purpose" name="fname" pattern="[A-Za-z0-9 ]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="days">Duration:</label><br>
-              <input type="text" id="nocu_days" name="lname" pattern="[A-Za-z0-9 ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_days" name="lname" pattern="[A-Za-z0-9 ]+" style="margin-left: 20px;"
+                required><br><br>
             </div>
             <div class="col-sm-6" style="text-align: left;padding-left: 150px;">
 
               <label for="pass_no">PASSPORT NO:</label><br>
-              <input type="text" id="nocu_passno" name="fname" pattern="[A-Za-z0-9]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_passno" name="fname" pattern="[A-Za-z0-9]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="action">DEPT ACTION IF ANY :</label><br>
-              <input type="text" id="nocu_action" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_action" name="lname" pattern="[A-Za-z ]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="service">SERVICE PARTICULARS:</label><br>
-              <input type="text" id="nocu_service" name="lname" pattern="[A-Za-z0-9 ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_service" name="lname" pattern="[A-Za-z0-9 ]+" style="margin-left: 20px;"
+                required><br><br>
               <label for="date">DATE OF NOC:</label><br>
               <input type="date" id="nocu_date" name="fname" style="margin-left: 20px;" required><br><br><br><br>
               <label for="purpose">NOC ISSUED/RETURNED:</label><br>
@@ -945,7 +983,8 @@
               <label for="reason">If Returned Reason:</label>
               <input type="text" id="nocu_reason" name="fname" style="margin-left: 20px;"><br><br>
               <label for="fre">FREQUENCY OF NOC:</label>
-              <input type="text" id="nocu_fre" name="lname" pattern="[A-Za-z0-9 ]+" style="margin-left: 20px;" required><br><br>
+              <input type="text" id="nocu_fre" name="lname" pattern="[A-Za-z0-9 ]+" style="margin-left: 20px;"
+                required><br><br>
 
 
             </div>
@@ -993,9 +1032,9 @@
             refno: refno, origin: origin, name: name, des: des, country: country, purpose: purpose, days: days, passport: passport, deptaction: deptaction,
             serviceparticular: serviceparticular, date: date, approval: approval, reason: reason, frequency: frequency
           }).then(qw => {
-                $('#exampleModalLong').modal('show');
-                document.getElementById('nocform').reset();
-              });
+            $('#exampleModalLong').modal('show');
+            document.getElementById('nocform').reset();
+          });
         } 
       </script>
       <div id="queries" class="tabcontent">
