--- a/public/cbcid.html
+++ b/public/cbcid.html
@@ -151,7 +151,6 @@
         <div id="home" class="tabcontent" style="display: block;">
         <div class="border">
           <h3>Security Branch </h3>
-          <p>CID</p>
           <div class="row">
             <div class="col-sm-6">
               <img src="assets/img/cbcid/sureshkumar.jpg" style="padding-bottom: 10px;" width="200px"
@@ -165,7 +164,7 @@
 			</div>
             </div>
             <div class="col-sm-6">
-			<p style="border-style: double;width:390px;margin-left:70px;">testimonial Appears Here!!</p>
+			<p style="border-style: double;width:390px;margin-left:70px;">Testimonial Appears Here!!</p>
 			<h2 style="font-size:20px">Today's Updates</h2>
               <marquee width="70%" direction="up" height="50%"
                 style="border:blue solid 3px;padding-top: 10px;text-align: center;">
